--- a/Directives/index.html
+++ b/Directives/index.html
@@ -52,7 +52,9 @@
         </div>
     </div>
     <div class="container body-content">
-    <div><breadcrumbs /></div>
+        <div>
+            <breadcrumbs />
+        </div>
         <div data-ui-view=""></div>
     </div>
 
