--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" data-ng-href="/#/">WPC 2014</a>
+                <a class="navbar-brand" data-ng-href="/#/">CloudParty 2015 / Bologna</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
