--- a/index.html
+++ b/index.html
@@ -10,52 +10,16 @@
         document.write('<base href="' + document.location + '" />');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
-    <link href="/bower_components/angular-busy/dist/angular-busy.css" rel="stylesheet"/>
-    <link href="/styles/site.css" rel="stylesheet"/>
-
-    <script src="/bower_components/modernizr/modernizr.js"></script>
 
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" data-ng-href="/#/">WPC 2014</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li data-ng-class="{ active: $state.includes('dashboard') || $state.includes('root') }">
-                        <a data-ng-href="/#/">Dashboard</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        <div data-ui-view=""></div>
+    <div ng-controller="dashboardController as dashboard">
+        <h1>Setting: {{dashboard.setting}}</h1>
     </div>
 
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/signalr/jquery.signalr.js"></script>
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="/bower_components/respond/dest/respond.min.js"></script>
-    <script src="/bower_components/respond/dest/respond.matchmedia.addListener.min.js"></script>
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-route/angular-route.js"></script>
-    <script src="/bower_components/ui-router/release/angular-ui-router.js"></script>
-    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="/bower_components/angular-ui-utils/ui-utils.js"></script>
-    <script src="/bower_components/angular-animate/angular-animate.js"></script>
-    <script src="/bower_components/angular-busy/dist/angular-busy.js"></script>
-
+    <script src="angular.js"></script>
     <script src="appModule.js"></script>
     <script src="sampleService.js"></script>
-    <script src="/presentation/dashboardController.js"></script>
+    <script src="dashboardController.js"></script>
 </body>
 </html>
